namespaces/live-1.cloud-platform.service.justice.gov.uk/calculate-journey-variable-payments-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calculate-journey-variable-payments-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "calculate-journey-payments"
    cloud-platform.justice.gov.uk/application: "Calculate Journey Variable Payments"
    cloud-platform.justice.gov.uk/owner: "PECS: calculatejourneypayments@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/calculate-journey-variable-payments"
    cloud-platform.justice.gov.uk/team-name: "calculate-journey-variable-payments"
